--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="./style.css" />
 
     <script src="https://use.fontawesome.com/ad6c76ee8e.js"></script>
+    <meta name="google-site-verification" content="z-kufcgapS1laOa9R3DRKFWVhZTNjo4E1ewkZ-Qy_YM" />
   </head>
 
   <body>
