--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                                 <!-- <a role="button" class="btn btn-outline-dark">Demo</a> -->
                                 <a class="btn btn-outline-dark mr-3" target="_blank"
                                     href="https://github.com/GeorgeLam/simon-game" role="button">Github</a>
-                                <a class="btn btn-outline-dark" target="_blank" href="https://georgelam.dev/simon-game"
+                                <a class="btn btn-outline-dark" target="_blank" href="https://www.codeply.com/v/hrjktcKH6k"
                                     role="button">Demo</a>
                             </div>
                         </div>
