--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
 
     <script src="https://use.fontawesome.com/ad6c76ee8e.js"></script>
     <meta name="google-site-verification" content="z-kufcgapS1laOa9R3DRKFWVhZTNjo4E1ewkZ-Qy_YM" />
-    <script defer src="./app.js"></script>
   </head>
 
   <body>
@@ -93,10 +92,9 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="row d-flex mb-5 mb-lg-0 flex-row">
+                        <div class="row d-flex w-100 w-lg-25 mb-4 mb-lg-0 flex-row justify-content-between">
                             <!-- <a role="button" class="btn btn-outline-dark">Demo</a> -->
-                            <a class="btn btn-outline-dark" target="_blank" href="https://github.com/GeorgeLam/calendar"
-                                role="button">Github</a>
+                            <a class="btn btn-outline-dark" target="_blank" href="https://github.com/GeorgeLam/coronavirus-mobility" role="button">Github</a>
                         </div>
                     </div>
                     <div class="col col-auto col-lg-4">
@@ -142,13 +140,15 @@
                             <div class="row">
                                 <div class="project-card d-flex flex-row">
                                     <p class="projectDetail mr-3">
-                                        An online calendar app that allows users to create, edit and delete events. The events are stored in the user's local storage.
+                                        Using data from Google's Coronavirus Global Mobility Report to display changes in activity
+                                        across a range of location types. Project uses Node and Express. The data is stored using
+                                        MongoDB and displayed with chart.js.
                                     </p>
                                 </div>
                             </div>
-                            <div class="row d-flex mb-5 mb-lg-0 flex-row">
+                            <div class="row d-flex mb-5 mb-lg-0 flex-row justify-content-around">
                                 <!-- <a role="button" class="btn btn-outline-dark">Demo</a> -->
-                                <a class="btn btn-outline-dark mr-3" target="_blank"
+                                <a class="btn btn-outline-dark" target="_blank"
                                     href="https://github.com/GeorgeLam/calendar" role="button">Github</a>
                                     <a class="btn btn-outline-dark" target="_blank" href="https://georgelam.dev/calendar" role="button">Demo</a>
                             </div>
@@ -174,13 +174,15 @@
                             <div class="row">
                                 <div class="project-card d-flex flex-row">
                                     <p class="projectDetail mr-3">
-                                        This website design incorporates Bootstrap and JQuery to deliver a responsive design and smooth user experience.
+                                        Using data from Google's Coronavirus Global Mobility Report to display changes in activity
+                                        across a range of location types. Project uses Node and Express. The data is stored using
+                                        MongoDB and displayed with chart.js.
                                     </p>
                                 </div>
                             </div>
-                            <div class="row d-flex mb-4 mb-lg-0 flex-row">
+                            <div class="row d-flex mb-4 mb-lg-0 flex-row justify-content-around">
                                 <!-- <a role="button" class="btn btn-outline-dark">Demo</a> -->
-                                <a class="btn btn-outline-dark mr-3" target="_blank"
+                                <a class="btn btn-outline-dark" target="_blank"
                                     href="https://github.com/GeorgeLam/redesigns/tree/master/flight-finder" role="button">Github</a>
                                 <a class="btn btn-outline-dark" target="_blank" href="https://georgelam.dev/redesigns/flight-finder" role="button">Demo</a>
                             </div>
@@ -207,13 +209,15 @@
                             <div class="row">
                                 <div class="project-card d-flex flex-row">
                                     <p class="projectDetail mr-3">
-                                        A recreation of the classic Simon Says game. The game escalates in difficulty, with patterns gradually getting longer, and the pattern hints gradually becoming faster.
+                                        Using data from Google's Coronavirus Global Mobility Report to display changes in activity
+                                        across a range of location types. Project uses Node and Express. The data is stored using
+                                        MongoDB and displayed with chart.js.
                                     </p>
                                 </div>
                             </div>
-                            <div class="row d-flex mb-4 mb-lg-0 flex-row">
+                            <div class="row d-flex mb-4 mb-lg-0 flex-row justify-content-around">
                                 <!-- <a role="button" class="btn btn-outline-dark">Demo</a> -->
-                                <a class="btn btn-outline-dark mr-3" target="_blank"
+                                <a class="btn btn-outline-dark" target="_blank"
                                     href="https://github.com/GeorgeLam/simon-game" role="button">Github</a>
                                 <a class="btn btn-outline-dark" target="_blank" href="https://www.codeply.com/v/hrjktcKH6k"
                                     role="button">Demo</a>
@@ -279,7 +283,11 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+      crossorigin="anonymous"
+    ></script>
     <script
       src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
       integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
