Adjusted bookshelf image

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                             </div>
                         </div>
                         <div class="col col-auto col-lg-4 mb-5">
-                            <img src="./img/bookshelf.jpg" class="screenshot rounded" alt="Screenshot of bookshelf app" id="bookshelf">
+                            <img src="./img/shelf.jpg" class="screenshot rounded" alt="Screenshot of bookshelf app" id="bookshelf">
                             <!-- <h2 class="mx-5 projImg">IMAGE HERE</h2> -->
                         </div>
                     </div>
