--- a/index.html
+++ b/index.html
@@ -115,8 +115,9 @@
                             </div>
                             <div class="row d-flex mb-5 mb-lg-0 flex-row">
                                 <!-- <a role="button" class="btn btn-outline-dark">Demo</a> -->
-                                <a class="btn btn-outline-dark" target="_blank"
-                                    href="https://github.com/GeorgeLam/calendar" role="button">Github</a>
+                                <a class="btn btn-outline-dark mr-3" target="_blank"
+                                    href="https://github.com/GeorgeLam/coronavirus-mobility" role="button">Github</a>
+                                <a class="btn btn-outline-dark" target="_blank" href="https://corona-mobility.herokuapp.com/" role="button">Demo</a>
                             </div>
                         </div>
                         <div class="col col-auto col-lg-4">
