Adjusted demo link for Bookshelf

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                             <div class="row">
                                 <div class="project-card d-flex flex-row">
                                     <p class="projectDetail mr-3">
-                                        This project uses the Google Books API to retrieve data about books, given a user's search for a book or author. Users can save books to their bookshelf, and later view and remove books from the shelf.
+                                        This project uses the Google Books API to retrieve data about books, given a user's search for a book or author. Users can save books to their bookshelf, review them, and later view and remove books from the shelf.
                                     </p>
                                 </div>
                             </div>
@@ -79,7 +79,7 @@
                                 <!-- <a role="button" class="btn btn-outline-dark">Demo</a> -->
                                 <a class="btn btn-outline-dark mr-3" target="_blank" href="https://github.com/GeorgeLam/bookshelf"
                                     role="button">Github</a>
-                                <a class="btn btn-outline-dark" target="_blank" href="https://georgelam.dev/bookshelf"
+                                <a class="btn btn-outline-dark" target="_blank" href="https://shudian.herokuapp.com/"
                                     role="button">Demo</a>
                             </div>
                         </div>
