--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <div class="row mx-auto w-100 my-3 d-flex flex-row justify-content-between">
                             <a class="main-links" href="#projects">Projects</a>
                             <a class="main-links" href="#about">About</a>
-                            <a class="main-links" href="#">CV</a>
+                            <a class="main-links" href="./img/cv.pdf" target="_blank">CV</a>
                         </div>
 
                         <div class="row">
@@ -71,7 +71,7 @@
                             <div class="row">
                                 <div class="project-card d-flex flex-row">
                                     <p class="projectDetail mr-3">
-                                        This project uses the Google Books API to retrieve data about books, given a user's search for a book or author. Users can save books to their bookshelf, review them, and later view and remove books from the shelf.
+                                        This project uses the Google Books API to retrieve data about books based on a user's search for a book or author. Users can save books to their bookshelf, review them, and later view and remove books from the shelf. Firebase is used for authentication, along with saving books and reviews.
                                     </p>
                                 </div>
                             </div>
@@ -107,8 +107,8 @@
                             <div class="row">
                                 <div class="project-card d-flex flex-row">
                                     <p class="projectDetail mr-3">
-                                        Using data from Google's Coronavirus Global Mobility Report to display changes
-                                        in activity across a range of location types. Project uses Node and Express. The
+                                        This project uses csv data from Google's Coronavirus Global Mobility Reports to display changes
+                                        in activity across a range of location types. Data for over 140 countries is available. The project uses Node and Express as a back-end, the
                                         data is stored using MongoDB and displayed with chart.js.
                                     </p>
                                 </div>
@@ -137,7 +137,7 @@
                             <div class="row">
                                 <div class="collapse" id="moreProjectDetail1">
                                     <p>Since the global outbreak of Covid-19, daily life has been impacted in all parts
-                                        of the world. Data released by Google for over 140 countries, demonstrates the
+                                        of the world. The data, released by Google for over 140 countries, demonstrates the
                                         change in activity at certain location types (i.e. workplaces, recreational
                                         areas).
                                     </p>
@@ -175,7 +175,7 @@
                                 <div class="project-card d-flex flex-row">
                                     <p class="projectDetail mr-3">
                                         An online calendar app that allows users to create, edit and delete events. The
-                                        events are stored in the user's local storage.
+                                        events are stored in the user's local storage. This was created with vanilla CSS and Javascript.
                                     </p>
                                 </div>
                             </div>
