--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     <link rel="stylesheet" href="./style.css" />
 
     <script src="https://use.fontawesome.com/ad6c76ee8e.js"></script>
-    <meta name="google-site-verification" content="z-kufcgapS1laOa9R3DRKFWVhZTNjo4E1ewkZ-Qy_YM" />
     <script defer src="./app.js"></script>
 </head>
 
@@ -76,7 +75,6 @@
                                 </div>
                             </div>
                             <div class="row d-flex mb-5 mb-lg-0 flex-row">
-                                <!-- <a role="button" class="btn btn-outline-dark">Demo</a> -->
                                 <a class="btn btn-outline-dark mr-3" target="_blank" href="https://github.com/GeorgeLam/bookshelf"
                                     role="button">Github</a>
                                 <a class="btn btn-outline-dark" target="_blank" href="https://shudian.herokuapp.com/"
@@ -85,7 +83,6 @@
                         </div>
                         <div class="col col-auto col-lg-4 mb-5">
                             <img src="./img/shelf.jpg" class="screenshot rounded" alt="Screenshot of bookshelf app" id="bookshelf">
-                            <!-- <h2 class="mx-5 projImg">IMAGE HERE</h2> -->
                         </div>
                     </div>
             
@@ -114,7 +111,6 @@
                                 </div>
                             </div>
                             <div class="row d-flex mb-5 mb-lg-0 flex-row">
-                                <!-- <a role="button" class="btn btn-outline-dark">Demo</a> -->
                                 <a class="btn btn-outline-dark mr-3" target="_blank"
                                     href="https://github.com/GeorgeLam/coronavirus-mobility" role="button">Github</a>
                                 <a class="btn btn-outline-dark" target="_blank" href="https://corona-mobility.herokuapp.com/" role="button">Demo</a>
@@ -123,7 +119,6 @@
                         <div class="col col-auto col-lg-4">
                             <img src="./img/corona.jpg" class="screenshot rounded"
                                 alt="Screenshot of coronavirus mobility graph">
-                            <!-- <h2 class="mx-5 projImg">IMAGE HERE</h2> -->
                         </div>
                     </div>
 
@@ -149,7 +144,7 @@
                                         display the data.
                                     </p>
                                     <p>
-                                    <div style="position: relative; padding-bottom: 66.66666666666666%; height: 0;">
+                                    <div style="position: relative; padding-bottom: 66%; height: 0;">
                                         <iframe src="https://www.loom.com/embed/74e517aa8e304cc4b782d9a38805a39a"
                                             frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen
                                             style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
@@ -180,7 +175,6 @@
                                 </div>
                             </div>
                             <div class="row d-flex mb-5 mb-lg-0 flex-row">
-                                <!-- <a role="button" class="btn btn-outline-dark">Demo</a> -->
                                 <a class="btn btn-outline-dark mr-3" target="_blank"
                                     href="https://github.com/GeorgeLam/calendar" role="button">Github</a>
                                 <a class="btn btn-outline-dark" target="_blank" href="https://georgelam.dev/calendar"
@@ -190,7 +184,6 @@
                         <div class="col col-auto col-lg-4">
                             <img src="./img/cal.jpg" class="screenshot rounded"
                                 alt="Screenshot of coronavirus mobility graph">
-                            <!-- <h2 class="mx-5 projImg">IMAGE HERE</h2> -->
                         </div>
                     </div>
 
@@ -215,7 +208,6 @@
                                 </div>
                             </div>
                             <div class="row d-flex mb-4 mb-lg-0 flex-row">
-                                <!-- <a role="button" class="btn btn-outline-dark">Demo</a> -->
                                 <a class="btn btn-outline-dark mr-3" target="_blank"
                                     href="https://github.com/GeorgeLam/redesigns/tree/master/flight-finder"
                                     role="button">Github</a>
@@ -226,7 +218,6 @@
                         <div class="col col-auto col-lg-4">
                             <img src="./img/flight.jpg" class="screenshot rounded"
                                 alt="Screenshot of coronavirus mobility graph">
-                            <!-- <h2 class="mx-5 projImg">IMAGE HERE</h2> -->
                         </div>
                     </div>
 
@@ -253,7 +244,6 @@
                                 </div>
                             </div>
                             <div class="row d-flex mb-4 mb-lg-0 flex-row">
-                                <!-- <a role="button" class="btn btn-outline-dark">Demo</a> -->
                                 <a class="btn btn-outline-dark mr-3" target="_blank"
                                     href="https://github.com/GeorgeLam/simon-game" role="button">Github</a>
                                 <a class="btn btn-outline-dark" target="_blank"
@@ -263,7 +253,6 @@
                         <div class="col col-auto col-lg-4">
                             <img src="./img/simon.jpg" class="screenshot rounded"
                                 alt="Screenshot of coronavirus mobility graph">
-                            <!-- <h2 class="mx-5 projImg">IMAGE HERE</h2> -->
                         </div>
                     </div>
 
@@ -296,18 +285,6 @@
                     <a class="main-links" href="mailto:hello@georgelam.dev">Reach out to me</a>
                 </div>
             </div>
-            <!-- <div class="skills">
-                <div class="row">
-                    <div class="col m-auto"><img src="./img/html.svg" alt=""></div>
-                    <div class="col m-auto"><img src="./img/css.svg" alt=""></div>
-                    <div class="col m-auto"><img src="./img/bootstrap.svg" alt=""></div>
-               </div>
-               <div class="row">
-                    <div class="col m-auto"><img src="./img/js.svg" alt=""></div>
-                    <div class="col m-auto"><img src="./img/jquery.svg" alt=""></div>
-                    <div class="col m-auto"><img src="./img/node.svg" alt=""></div>
-               </div>
-            </div> -->
         </section>
 
         <footer class="container mt-5">
