--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                                 <div class="project-card d-flex flex-row">
                                     <p class="projectDetail mr-3">
                                         A recreation of the classic Simon Says game. The game escalates in difficulty,
-                                        with patterns gradually getting longer, and the pattern hints gradually becoming
+                                        with patterns gradually getting longer and the pattern hints gradually becoming
                                         faster.
                                     </p>
                                 </div>
@@ -277,7 +277,7 @@
                         back-end too. I want to develop web applications that provide a great user experience and make
                         people's lives easier.</p>
                     <p>
-                        My skills include HTML, CSS, Bootstrap, Javascript, JQuery, and Node.
+                        My skills include HTML, CSS, Bootstrap, Javascript, JQuery, React and Node.
                     </p>
                     <p>Aside from web development, I'm a frequent runner, photographer, and Chinese learner.</p>
                     <p>While studying at King's College London, I spent a year abroad at the University of Hong Kong.
