--- a/index.html
+++ b/index.html
@@ -32,19 +32,18 @@
                         </div>
 
                         <div class="row">
-                            <div class="display-3 mb-3 text-center" id="name">George Lam</div>
+                            <div class="display-3 mb-3 text-center name">George Lam</div>
                         </div>
                         <div class="row">
-                            <h4 id="name" class="text-center">Web developer based in Chichester, UK</h4>
+                            <h4 class="name" class="text-center">Web developer based in Chichester, UK</h4>
                         </div>
 
                         <div class="row mx-auto w-100 w-lg-50 my-4 d-flex flex-row justify-content-around">
-                            <a class="social-links" target="_blank" href="https://www.linkedin.com/in/georgesflam/"><i
-                                    class="fa fa-linkedin"></i></a>
+                            <a class="social-links" target="_blank" href="https://www.linkedin.com/in/georgesflam/">LinkedIn</a>
 
-                            <a class="social-links" target="_blank" href="https://github.com/GeorgeLam"><i
-                                    class="fa fa-github"></i></a>
-                            <a class="social-links" href="mailto:hello@georgelam.dev"><i class="fa fa-envelope"></i></a>
+                            <a class="social-links" target="_blank" href="https://github.com/GeorgeLam">
+                                Github</a>
+                            <a class="social-links" href="mailto:hello@georgelam.dev">Email</a>
                         </div>
                     </div>
                 </div>
@@ -70,12 +69,13 @@
                             <div class="row">
                                 <div class="project-card d-flex flex-row">
                                     <p class="projectDetail mr-3">
-                                        This project uses the Google Books API to retrieve data about books based on a user's search for a book or author. Users can save books to their bookshelf, review them, and later view and remove books from the shelf. Firebase is used for authentication, along with saving books and reviews.
+                                        A CRUD web application created using React.js. Users can find and review books using data from the Google Books API.
+                                        Firebase is used for authentication and Firestore for saving a user's reviews and saved titles.
                                     </p>
                                 </div>
                             </div>
                             <div class="row d-flex mb-5 mb-lg-0 flex-row">
-                                <a class="btn btn-outline-dark mr-3" target="_blank" href="https://github.com/GeorgeLam/bookshelf"
+                                <a class="btn btn-outline-dark mr-3" target="_blank" href="https://github.com/GeorgeLam/bookshelf-react"
                                     role="button">Github</a>
                                 <a class="btn btn-outline-dark" target="_blank" href="https://shudian.herokuapp.com/"
                                     role="button">Demo</a>
@@ -292,7 +292,7 @@
                 <a class="main-links" href="#top">Home</a>
                 <a class="main-links" href="#projects">Projects</a>
                 <a class="main-links" href="#about">About</a>
-                <a class="main-links" href="#">CV</a>
+                <a class="main-links" href="./img/cv.pdf" target="_blank">CV</a>
             </div>
         </footer>
 
@@ -301,6 +301,12 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"
+        integrity="sha512-8Wy4KH0O+AuzjMm1w5QfZ5j5/y8Q/kcUktK9mPUVaUoBvh3QPUZB822W/vy7ULqri3yR8daH3F58+Y8Z08qzeg=="
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"
+        integrity="sha512-8Wy4KH0O+AuzjMm1w5QfZ5j5/y8Q/kcUktK9mPUVaUoBvh3QPUZB822W/vy7ULqri3yR8daH3F58+Y8Z08qzeg=="
+        crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
