--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                             <div class="row d-flex mb-5 mb-lg-0 flex-row">
                                 <a class="btn btn-outline-dark mr-3" target="_blank" href="https://github.com/GeorgeLam/bookshelf-react"
                                     role="button">Github</a>
-                                <a class="btn btn-outline-dark" target="_blank" href="https://shudian.herokuapp.com/"
+                                <a class="btn btn-outline-dark" target="_blank" href="https://shudian.netlify.app/"
                                     role="button">Demo</a>
                             </div>
                         </div>
