Adjusted css, removed GSAP

--- a/index.html
+++ b/index.html
@@ -32,10 +32,13 @@
                         </div>
 
                         <div class="row">
-                            <div class="display-3 mb-3 text-center name">George Lam</div>
+                            <div class="display-3 mb-2 mb-lg-3 text-center name top-text">George Lam</div>
                         </div>
                         <div class="row">
-                            <h4 class="name" class="text-center">Web developer based in Chichester, UK</h4>
+                            <p class="sub text-center top-text">Front-End Web Developer</p>
+                        </div>
+                        <div class="row">
+                            <p class="loc text-center top-text">📍 London, UK</p>
                         </div>
 
                         <div class="row mx-auto w-100 w-lg-50 my-4 d-flex flex-row justify-content-around">
@@ -266,20 +269,17 @@
         <!-- End of projects container -->
 
         <section class="container" id="about">
-            <div class="row my-5">
+            <div class="row mt-3 mt-lg-5">
                 <div class="col">
                     <div class="display-4 my-4" id="about-title">About Me</div>
                 </div>
             </div>
             <div class="row about-text-container d-flex flex-column justify-content-center align-items-center">
                 <div class="col col-sm-12 col-lg-6 about-text text-center mb-3">
-                    <p>I'm a web developer based in Chichester. I focus on the front-end, but have experience with
-                        back-end too. I want to develop web applications that provide a great user experience and make
-                        people's lives easier.</p>
-                    <p>
-                        My skills include HTML, CSS, Bootstrap, Javascript, JQuery, React and Node.
+                    <p>I'm a web developer based in London, UK. I focus on the front-end, but also have back-end skills. </p>
+                        <p>I have demonstrable knowledge of Javascript, jQuery, React, Gatsby, GraphQL and Node. I've built my projects using vanilla CSS/SCSS, along with UI libraries such as Bootstrap and Material.ui. 
                     </p>
-                    <p>Aside from web development, I'm a frequent runner, photographer, and Chinese learner.</p>
+                    <p>Aside from web development, I'm a frequent runner, photographer, reader of historical fiction, and Chinese learner.</p>
                     <p>While studying at King's College London, I spent a year abroad at the University of Hong Kong.
                         Since graduating in 2019, I have lived in Beijing and Taipei.</p>
                     <a class="main-links" href="mailto:hello@georgelam.dev">Reach out to me</a>
