Added Earthquake Finder project

--- a/index.html
+++ b/index.html
@@ -96,6 +96,41 @@
             </div>
             <!--Project row ends-->
 
+<div class="row">
+    <!--Row for each project-->
+    <div class="col">
+        <div class="row mb-3 proj d-flex flex-column flex-lg-row">
+            <div class="col col-auto col-lg-8 proj-info">
+                <div class="row">
+                    <h4>Earthquake Finder</h4>
+                </div>
+                <div class="row">
+                    <div class="project-card d-flex flex-row">
+                        <p class="projectDetail mr-3">
+                            A web app built with React.js that displays the location and magnitude of earthquakes around the world. User can specify the time period and magnitude to search for. Earthquake data from <a href="https://earthquake.usgs.gov/fdsnws/event/1/">USGS API</a>, displayed with Leaflet.js and OpenStreetMap. 
+                        </p>
+                    </div>
+                </div>
+                <div class="row d-flex mb-5 mb-lg-0 flex-row">
+                    <a class="btn btn-outline-dark mr-3" target="_blank"
+                        href="https://github.com/GeorgeLam/earthquakes/" role="button">Github</a>
+                    <a class="btn btn-outline-dark" target="_blank" href="https://quakemap.netlify.app/"
+                        role="button">Demo</a>
+                </div>
+            </div>
+            <div class="col col-auto col-lg-4 mb-5">
+                <img src="./img/quake.jpg" class="screenshot rounded" alt="Screenshot of Earthquake Finder app" id="quakemap">
+            </div>
+        </div>
+
+
+
+
+    </div>
+</div>
+<!--Project row ends-->
+
+
             <div class="row">
                 <!--Row for each project-->
                 <div class="col">
