Adjusted link styling, updated image link

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
                             <div class="row">
                                 <div class="project-card d-flex flex-row">
                                     <p class="projectDetail mr-3">
-                                        A CRUD web application created using React.js. Users can find and review books using data from the Google Books API.
-                                        Firebase is used for authentication and Firestore for saving a user's reviews and saved titles.
+                                        A CRUD web application created using React.js. Users can find and review books using data from the <a href="https://developers.google.com/books/docs/v1/using">Google Books API</a>.
+                                        Firebase is used for authentication and Firestore for saving a user's reviews and saved titles. The design is responsive and suitable for mobile usage.
                                     </p>
                                 </div>
                             </div>
@@ -107,7 +107,7 @@
                 <div class="row">
                     <div class="project-card d-flex flex-row">
                         <p class="projectDetail mr-3">
-                            A web app built with React.js that displays the location and magnitude of earthquakes around the world. User can specify the time period and magnitude to search for. Earthquake data from <a href="https://earthquake.usgs.gov/fdsnws/event/1/">USGS API</a>, displayed with Leaflet.js and OpenStreetMap. 
+                            A web app built with React.js and <a href="https://earthquake.usgs.gov/fdsnws/event/1/">USGS' API</a> that displays the location and magnitude of earthquakes around the world. User can specify the time period and magnitude to search for. Earthquake data is displayed with Leaflet.js and OpenStreetMap. The design is responsive and suitable for mobile usage.
                         </p>
                     </div>
                 </div>
@@ -119,7 +119,7 @@
                 </div>
             </div>
             <div class="col col-auto col-lg-4 mb-5">
-                <img src="./img/quake.jpg" class="screenshot rounded" alt="Screenshot of Earthquake Finder app" id="quakemap">
+                <img src="./img/eq.JPG" class="screenshot rounded" alt="Screenshot of Earthquake Finder app" id="quakemap">
             </div>
         </div>
 
@@ -142,9 +142,9 @@
                             <div class="row">
                                 <div class="project-card d-flex flex-row">
                                     <p class="projectDetail mr-3">
-                                        This project uses csv data from Google's Coronavirus Global Mobility Reports to display changes
-                                        in activity across a range of location types. Data for over 140 countries is available. The project uses Node and Express as a back-end, the
-                                        data is stored using MongoDB and displayed with chart.js.
+                                        This full-stack project, built with Node, Express, and MongoDB uses csv data from Google's Coronavirus <a href="https://www.google.com/covid19/mobility/">Global Mobility Reports </a> to display changes
+                                        in activity across a range of location types. Data for over 140 countries is available. The
+                                        data is stored using MongoDB, retrieved from the backend, and displayed with chart.js.
                                     </p>
                                 </div>
                             </div>
