Added coffeeshop project

--- a/index.html
+++ b/index.html
@@ -196,38 +196,38 @@
             </div>
             <!--Project row ends-->
 
-            <div class="row">
-                <!--Row for each project-->
-                <div class="col">
-                    <div class="row my-3 proj d-flex flex-column flex-lg-row">
-                        <div class="col col-auto col-lg-8 proj-info">
-                            <div class="row">
-                                <h4>Calendar</h4>
-                            </div>
-                            <div class="row">
-                                <div class="project-card d-flex flex-row">
-                                    <p class="projectDetail mr-3">
-                                        An online calendar app that allows users to create, edit and delete events. The
-                                        events are stored in the user's local storage. This was created with vanilla CSS and Javascript.
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="row d-flex mb-5 mb-lg-0 flex-row">
-                                <a class="btn btn-outline-dark mr-3" target="_blank"
-                                    href="https://github.com/GeorgeLam/calendar" role="button">Github</a>
-                                <a class="btn btn-outline-dark" target="_blank" href="https://georgelam.dev/calendar"
-                                    role="button">Demo</a>
-                            </div>
-                        </div>
-                        <div class="col col-auto col-lg-4">
-                            <img src="./img/cal.jpg" class="screenshot rounded"
-                                alt="Screenshot of coronavirus mobility graph">
-                        </div>
+<div class="row">
+    <!--Row for each project-->
+    <div class="col">
+        <div class="row my-3 proj d-flex flex-column flex-lg-row">
+            <div class="col col-auto col-lg-8 proj-info">
+                <div class="row">
+                    <h4>Gatsby / React Design and Blog</h4>
+                </div>
+                <div class="row">
+                    <div class="project-card d-flex flex-row">
+                        <p class="projectDetail mr-3">
+                            This coffeeshop website was created using React.js and Gatsby. Blog posts are fetched from Contentful using GraphQL. The responsive design was created with vanilla CSS. 
+                        </p>
                     </div>
-
+                </div>
+                <div class="row d-flex mb-5 mb-lg-0 flex-row">
+                    <a class="btn btn-outline-dark mr-3" target="_blank" href="https://github.com/GeorgeLam/coffee-gatsby"
+                        role="button">Github</a>
+                    <a class="btn btn-outline-dark" target="_blank" href="https://betterlatte.netlify.app/"
+                        role="button">Demo</a>
                 </div>
             </div>
-            <!--Project row ends-->
+            <div class="col col-auto col-lg-4">
+                <img src="./img/latte.JPG" class="screenshot rounded" alt="Screenshot of coffeeshop design">
+            </div>
+        </div>
+
+    </div>
+</div>
+<!--Project row ends-->
+
+
 
             <div class="row">
                 <!--Row for each project-->
@@ -263,6 +263,41 @@
                 </div>
             </div>
             <!--Project row ends-->
+
+<div class="row">
+    <!--Row for each project-->
+    <div class="col">
+        <div class="row my-3 proj d-flex flex-column flex-lg-row">
+            <div class="col col-auto col-lg-8 proj-info">
+                <div class="row">
+                    <h4>Calendar</h4>
+                </div>
+                <div class="row">
+                    <div class="project-card d-flex flex-row">
+                        <p class="projectDetail mr-3">
+                            An online calendar app that allows users to create, edit and delete events. The
+                            events are stored in the user's local storage. This was created with vanilla CSS and
+                            Javascript.
+                        </p>
+                    </div>
+                </div>
+                <div class="row d-flex mb-5 mb-lg-0 flex-row">
+                    <a class="btn btn-outline-dark mr-3" target="_blank" href="https://github.com/GeorgeLam/calendar"
+                        role="button">Github</a>
+                    <a class="btn btn-outline-dark" target="_blank" href="https://georgelam.dev/calendar"
+                        role="button">Demo</a>
+                </div>
+            </div>
+            <div class="col col-auto col-lg-4">
+                <img src="./img/cal.jpg" class="screenshot rounded" alt="Screenshot of coronavirus mobility graph">
+            </div>
+        </div>
+
+    </div>
+</div>
+<!--Project row ends-->
+
+
 
             <div class="row">
                 <!--Row for each project-->
