Added Pixelshare project

--- a/index.html
+++ b/index.html
@@ -81,6 +81,38 @@
                 <div class="display-4 my-4">Projects</div>
             </div>
 
+<div class="row">
+    <!--Row for each project-->
+    <div class="col">
+        <div class="row mb-3 proj d-flex flex-column flex-lg-row">
+            <div class="col col-auto col-lg-8 proj-info">
+                <div class="row">
+                    <h4>Pixelshare</h4>
+                </div>
+                <div class="row">
+                    <div class="project-card d-flex flex-row">
+                        <p class="projectDetail mr-3">
+                            A full-stack app, inspired by Instagram, built with MongoDB, Express, Node and React (MERN stack) that allows users to upload and share photos. Users can additionally like, comment, and update their profiles. The design is responsive and suitable for mobile usage.
+                        </p>
+                    </div>
+                </div>
+                <div class="row d-flex mb-5 mb-lg-0 flex-row">
+                    <a class="btn btn-outline-dark mr-3" target="_blank" rel="noopener noreferrer"
+                        rel="noopener noreferrer" href="https://github.com/GeorgeLam/pixelshare"
+                        role="button">Github</a>
+                    <a class="btn btn-outline-dark" target="_blank" rel="noopener noreferrer" rel="noopener noreferrer"
+                        href="http://pixel-share.herokuapp.com/" role="button">Demo</a>
+                </div>
+            </div>
+            <div class="col col-auto col-lg-4 mb-5">
+                <img src="./img/pixel.jpg" class="screenshot rounded" alt="Screenshot of Pixelshare app" id="pixelshare">
+            </div>
+        </div>
+    </div>
+</div>
+<!--Project row ends-->
+
+
             <div class="row">
                 <!--Row for each project-->
                 <div class="col">
