Added details on Gatsby project, adjusted some details

--- a/index.html
+++ b/index.html
@@ -147,6 +147,39 @@
 <div class="row">
     <!--Row for each project-->
     <div class="col">
+        <div class="row mb-5 proj d-flex flex-column flex-lg-row">
+            <div class="col col-auto col-lg-8 proj-info">
+                <div class="row">
+                    <h4>Gatsby / React Store and Blog</h4>
+                </div>
+                <div class="row">
+                    <div class="project-card d-flex flex-row">
+                        <p class="projectDetail mr-3">
+                            This coffeeshop website was created using React.js and Gatsby. Features a store (using
+                            Snipcart API) and blog. Store products and blog posts are fetched from Contentful CMS using
+                            GraphQL. The responsive design was created with vanilla CSS.
+                        </p>
+                    </div>
+                </div>
+                <div class="row d-flex mb-5 mb-lg-0 flex-row">
+                    <a class="btn btn-outline-dark mr-3" target="_blank" rel="noopener noreferrer"
+                        href="https://github.com/GeorgeLam/coffee-gatsby" role="button">Github</a>
+                    <a class="btn btn-outline-dark" target="_blank" rel="noopener noreferrer"
+                        href="https://betterlatte.netlify.app/" role="button">Demo</a>
+                </div>
+            </div>
+            <div class="col col-auto col-lg-4">
+                <img src="./img/latte.JPG" class="screenshot rounded" alt="Screenshot of coffeeshop design">
+            </div>
+        </div>
+
+    </div>
+</div>
+<!--Project row ends-->
+
+<div class="row">
+    <!--Row for each project-->
+    <div class="col">
         <div class="row mb-3 proj d-flex flex-column flex-lg-row">
             <div class="col col-auto col-lg-8 proj-info">
                 <div class="row">
@@ -240,39 +273,6 @@
             </div>
             <!--Project row ends-->
 
-<div class="row">
-    <!--Row for each project-->
-    <div class="col">
-        <div class="row my-3 proj d-flex flex-column flex-lg-row">
-            <div class="col col-auto col-lg-8 proj-info">
-                <div class="row">
-                    <h4>Gatsby / React Design and Blog</h4>
-                </div>
-                <div class="row">
-                    <div class="project-card d-flex flex-row">
-                        <p class="projectDetail mr-3">
-                            This coffeeshop website was created using React.js and Gatsby. Blog posts are fetched from Contentful using GraphQL. The responsive design was created with vanilla CSS. 
-                        </p>
-                    </div>
-                </div>
-                <div class="row d-flex mb-5 mb-lg-0 flex-row">
-                    <a class="btn btn-outline-dark mr-3" target="_blank" rel="noopener noreferrer" href="https://github.com/GeorgeLam/coffee-gatsby"
-                        role="button">Github</a>
-                    <a class="btn btn-outline-dark" target="_blank" rel="noopener noreferrer" href="https://betterlatte.netlify.app/"
-                        role="button">Demo</a>
-                </div>
-            </div>
-            <div class="col col-auto col-lg-4">
-                <img src="./img/latte.JPG" class="screenshot rounded" alt="Screenshot of coffeeshop design">
-            </div>
-        </div>
-
-    </div>
-</div>
-<!--Project row ends-->
-
-
-
             <div class="row">
                 <!--Row for each project-->
                 <div class="col">
@@ -321,7 +321,7 @@
                         <p class="projectDetail mr-3">
                             An online calendar app that allows users to create, edit and delete events. The
                             events are stored in the user's local storage. This was created with vanilla CSS and
-                            Javascript.
+                            JavaScript.
                         </p>
                     </div>
                 </div>
@@ -341,41 +341,6 @@
 </div>
 <!--Project row ends-->
 
-            <div class="row">
-                <!--Row for each project-->
-                <div class="col">
-                    <div class="row my-5 proj d-flex flex-column flex-lg-row">
-                        <div class="col col-auto col-lg-8 proj-info">
-                            <div class="row">
-                                <h4>Simon Says Game</h4>
-                            </div>
-                            <div class="row">
-                                <div class="project-card d-flex flex-row">
-                                    <p class="projectDetail mr-3">
-                                        A recreation of the classic Simon Says game. The game escalates in difficulty,
-                                        with patterns gradually getting longer and the pattern hints gradually becoming
-                                        faster.
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="row d-flex mb-4 mb-lg-0 flex-row">
-                                <a class="btn btn-outline-dark mr-3" target="_blank" rel="noopener noreferrer"
-                                    href="https://github.com/GeorgeLam/simon-game" role="button">Github</a>
-                                <a class="btn btn-outline-dark" target="_blank" rel="noopener noreferrer"
-                                    href="https://georgelam.dev/simon-game/" role="button">Demo</a>
-                            </div>
-                        </div>
-                        <div class="col col-auto col-lg-4">
-                            <img src="./img/simon.jpg" class="screenshot rounded"
-                                alt="Screenshot of coronavirus mobility graph">
-                        </div>
-                    </div>
-
-
-                </div>
-            </div>
-            <!--Project row ends-->
-
         </section>
 
         <!-- End of projects container -->
@@ -389,7 +354,7 @@
             <div class="row about-text-container d-flex flex-column justify-content-center align-items-center">
                 <div class="col col-sm-12 col-lg-6 about-text text-center mb-3">
                     <p>I'm a web developer based in London, UK. I focus on the front-end, but also have back-end skills. </p>
-                    <p>I have demonstrable knowledge of Javascript, jQuery, React, Gatsby, GraphQL and Node. I've built my projects using vanilla CSS/SCSS, along with UI libraries such as Bootstrap and Material.ui. 
+                    <p>I have demonstrable knowledge of JavaScript, jQuery, React, Gatsby, GraphQL, MongoDB and Node. I've built my projects using vanilla CSS/SCSS, along with UI libraries such as Bootstrap and Material.ui. 
                     </p>
                     <p>Aside from web development, I'm a frequent runner, photographer, reader of historical fiction, and Chinese learner.</p>
                     <p>While studying at King's College London, I spent a year abroad at the University of Hong Kong.
