Updated CV, added analytics

--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-174154597-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-174154597-1');
+    </script>
+
     <!-- Primary Meta Tags -->
     <title>George Lam: Front-End Web Developer</title>
     <meta name="title" content="George Lam: Front-End Web Developer">
@@ -92,7 +102,7 @@
                 <div class="row">
                     <div class="project-card d-flex flex-row">
                         <p class="projectDetail mr-3">
-                            A full-stack app, inspired by Instagram, built with MongoDB, Express, Node and React (MERN stack) that allows users to upload and share photos. Users can additionally like, comment, and update their profiles. The design is responsive and suitable for mobile usage.
+                            A full-stack app, inspired by Instagram, built with MongoDB, Express, React and Node (MERN stack) that allows users to upload and share photos. Users can additionally like, comment, and update their profiles. The design is responsive and suitable for mobile usage.
                         </p>
                     </div>
                 </div>
