--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
     </script>
 
     <!-- Primary Meta Tags -->
-    <title>George Lam: Front-End Web Developer</title>
-    <meta name="title" content="George Lam: Front-End Web Developer">
-    <meta name="description" content="Front-end web developer based in UK. Portfolio of web projects.">
+    <title>George Lam: Full-Stack Software Developer</title>
+    <meta name="title" content="George Lam: Full-Stack Software Developer">
+    <meta name="description" content="Full-Stack Software Developer based in UK. Portfolio of web projects.">
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://georgelam.dev/">
-    <meta property="og:title" content="George Lam: Front-End Web Developer">
-    <meta property="og:description" content="Front-end web developer based in UK. Portfolio of web projects.">
+    <meta property="og:title" content="George Lam: Full-Stack Software Developer">
+    <meta property="og:description" content="Full-Stack Software Developer based in UK. Portfolio of web projects.">
     <meta property="og:image" content="https://georgelam.dev/img/prev.JPG">
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://georgelam.dev/">
-    <meta property="twitter:title" content="George Lam: Front-End Web Developer">
-    <meta property="twitter:description" content="Front-end web developer based in UK. Portfolio of web projects.">
+    <meta property="twitter:title" content="George Lam: Full-Stack Software Developer">
+    <meta property="twitter:description" content="Full-Stack Software Developer based in UK. Portfolio of web projects.">
     <meta property="twitter:image" content="https://georgelam.dev/img/prev.JPG">
 
 
@@ -40,7 +40,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
 
-    <title>George Lam: Front-End Web Developer</title>
+    <title>George Lam: Full-Stack Software Developer</title>
 
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;500;600&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="./style.css" />
@@ -65,7 +65,7 @@
                             <div class="display-3 mb-2 mb-lg-3 text-center name top-text">George Lam</div>
                         </div>
                         <div class="row">
-                            <p class="sub text-center top-text">Front-End Web Developer</p>
+                            <p class="sub text-center top-text">Full-Stack Software Developer</p>
                         </div>
                         <div class="row">
                             <p class="loc text-center top-text">📍 London, UK</p>
