--- a/index.html
+++ b/index.html
@@ -363,12 +363,12 @@
             </div>
             <div class="row about-text-container d-flex flex-column justify-content-center align-items-center">
                 <div class="col col-sm-12 col-lg-6 about-text text-center mb-3">
-                    <p>I'm a web developer based in London, UK. I focus on the front-end, but also have back-end skills. </p>
-                    <p>I have demonstrable knowledge of JavaScript, jQuery, React, Gatsby, GraphQL, MongoDB and Node. I've built my projects using vanilla CSS/SCSS, along with UI libraries such as Bootstrap and Material.ui. 
+                    <p>I'm a full-stack software developer based in London, UK, working as a Product Engineering Lead for a fintech start-up.</p>
+                    <p>I have professional experience with PHP and JavaScript (Node, React, React Native, Gatsby), along with MongoDB, GraphQL, Docker and AWS.
                     </p>
-                    <p>Aside from web development, I'm a frequent runner, photographer, reader of historical fiction, and Chinese learner.</p>
+                    <p>Aside from engineering, I'm a frequent runner, photographer, reader of historical fiction, and Chinese learner.</p>
                     <p>While studying at King's College London, I spent a year abroad at the University of Hong Kong.
-                        Since graduating in 2019, I have lived in Beijing and Taipei.</p>
+                        Since graduating in 2019, I have lived in Beijing and Taipei (including during the pandemic!).</p>
                     <a class="main-links" href="mailto:hello@georgelam.dev">Reach out to me</a>
                 </div>
             </div>
