--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
     </script>
 
     <!-- Primary Meta Tags -->
-    <title>George Lam: Full-Stack Software Developer</title>
-    <meta name="title" content="George Lam: Full-Stack Software Developer">
-    <meta name="description" content="Full-Stack Software Developer based in UK. Portfolio of web projects.">
+    <title>George Lam: Full-Stack Software Engineer</title>
+    <meta name="title" content="George Lam: Full-Stack Software Engineer">
+    <meta name="description" content="Full-Stack Software Engineer based in UK. Portfolio of web projects.">
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://georgelam.dev/">
-    <meta property="og:title" content="George Lam: Full-Stack Software Developer">
-    <meta property="og:description" content="Full-Stack Software Developer based in UK. Portfolio of web projects.">
+    <meta property="og:title" content="George Lam: Full-Stack Software Engineer">
+    <meta property="og:description" content="Full-Stack Software Engineer based in UK. Portfolio of web projects.">
     <meta property="og:image" content="https://georgelam.dev/img/prev.JPG">
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://georgelam.dev/">
-    <meta property="twitter:title" content="George Lam: Full-Stack Software Developer">
-    <meta property="twitter:description" content="Full-Stack Software Developer based in UK. Portfolio of web projects.">
+    <meta property="twitter:title" content="George Lam: Full-Stack Software Engineer">
+    <meta property="twitter:description" content="Full-Stack Software Engineer based in UK. Portfolio of web projects.">
     <meta property="twitter:image" content="https://georgelam.dev/img/prev.JPG">
 
 
@@ -40,7 +40,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
 
-    <title>George Lam: Full-Stack Software Developer</title>
+    <title>George Lam: Full-Stack Software Engineer</title>
 
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;500;600&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="./style.css" />
@@ -65,7 +65,7 @@
                             <div class="display-3 mb-2 mb-lg-3 text-center name top-text">George Lam</div>
                         </div>
                         <div class="row">
-                            <p class="sub text-center top-text">Full-Stack Software Developer</p>
+                            <p class="sub text-center top-text">Full-Stack Software Engineer</p>
                         </div>
                         <div class="row">
                             <p class="loc text-center top-text">📍 London, UK</p>
@@ -102,7 +102,7 @@
                 <div class="row">
                     <div class="project-card d-flex flex-row">
                         <p class="projectDetail mr-3">
-                            A full-stack app, inspired by Instagram, built with MongoDB, Express, React and Node (MERN stack) that allows users to upload and share photos. Users can additionally like, comment, and update their profiles. The design is responsive and suitable for mobile usage.
+                            A full-stack app, inspired by Instagram, built with AWS S3, MongoDB, Express, React and Node (MERN stack) that allows users to upload and share photos. Users can additionally like, comment, and update their profiles. The design is responsive and suitable for mobile usage.
                         </p>
                     </div>
                 </div>
@@ -134,7 +134,7 @@
                             <div class="row">
                                 <div class="project-card d-flex flex-row">
                                     <p class="projectDetail mr-3">
-                                        A CRUD web application created using React.js. Users can find and review books using data from the <a href="https://developers.google.com/books/docs/v1/using" target="_blank" rel="noopener noreferrer">Google Books API</a>.
+                                        A CRUD web application created using React.js and Google Firebase. Users can find and review books using data from the <a href="https://developers.google.com/books/docs/v1/using" target="_blank" rel="noopener noreferrer">Google Books API</a>.
                                         Firebase is used for authentication and Firestore for saving a user's reviews and saved titles. The design is responsive and suitable for mobile usage.
                                     </p>
                                 </div>
