--- a/index.html
+++ b/index.html
@@ -363,10 +363,13 @@
             </div>
             <div class="row about-text-container d-flex flex-column justify-content-center align-items-center">
                 <div class="col col-sm-12 col-lg-6 about-text text-center mb-3">
-                    <p>I'm a full-stack software developer based in London, UK, working as a Product Engineering Lead for a fintech start-up.</p>
-                    <p>I have professional experience with PHP and JavaScript (Node, React, React Native, Gatsby), along with MongoDB, GraphQL, Docker and AWS.
+                    <p>I'm a full-stack engineer based in London, UK, working as a Software Engineer for a fintech start-up.</p>
+                    <p>I have professional experience with Typescript, Python, Elixir, along with PostgresQL, MongoDB, GraphQL, Docker and AWS.
                     </p>
-                    <p>Aside from engineering, I'm a frequent runner, photographer, reader of historical fiction, and Chinese learner.</p>
+                    <p>Aside from engineering, I'm a frequent runner and
+                    photographer. I also speak some 中文 although I'm getting
+                    rustier and rustier.
+                    </p>
                     <p>While studying at King's College London, I spent a year abroad at the University of Hong Kong.
                         Since graduating in 2019, I have lived in Beijing and Taipei (including during the pandemic!).</p>
                     <a class="main-links" href="mailto:hello@georgelam.dev">Reach out to me</a>
@@ -379,7 +382,6 @@
                 <a class="main-links" href="#top">Home</a>
                 <a class="main-links" href="#projects">Projects</a>
                 <a class="main-links" href="#about">About</a>
-                <a class="main-links" href="./img/cv.pdf" target="_blank" rel="noopener noreferrer" rel="noopener noreferrer">CV</a>
             </div>
         </footer>
 
